# LearnCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.clangd/: compile_commands.json
src/: CMakeLists.txt
src/include/: basic.h  sort.h
src/source/: baisc.cpp  sort.c
test/: CMakeLists.txt  testcase.cpp  testcase.h
